last update before noa

--- a/src/App.css
+++ b/src/App.css
@@ -114,3 +114,18 @@
   display: flex;
   flex-direction: row;
 }
+
+.ChoseBuilding .leftSlide, .rightSlide {
+  margin-top: 19%;
+
+}
+
+.ChoseBuilding .table {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.ChoseBuilding h1 {
+  margin-left: 20px;
+  margin-right: 20px;
+}
