Swithching between versions

--- a/src/App.css
+++ b/src/App.css
@@ -1,131 +1,232 @@
 * {
-  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  background: #142831;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+/* Footer Design */
+.footer {
+  padding-bottom: 15px;
+}
+
+.footer h1 {
+  display: none;
+}
+
+/* Login page design */
+.login-container {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 100px;
+}
+
+
+.login-container:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  background: wheat;
+  background-size: cover;
+  filter: blur(220px);
+  z-index: -1;
+
+}
+
+.login-box {
+  max-width: 850px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: #fff;
+  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+  border-radius: 10px;
+  margin: 25px;
+}
+
+.login-box .right h1 {
+  color: #1c343f;
+}
+
+
+.left {
+  background: url("images/loginImg.jpg") no-repeat center;
+  background-size: cover;
+  height: 100%;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.right {
+  padding: 35px 45px;
+}
+
+/* Input Design */
+.field {
+  width: 100%;
+  border: 2px solid rgba(0, 0, 0, 0);
+  outline: none;
+  background-color: rgba(230, 230, 230, 0.6);
+  padding: 0.5rem 1rem;
+  font-size: 1.1rem;
+  margin-bottom: 22px;
+  transition: .3s;
   direction: rtl;
 }
 
+.field:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
 
+.field:focus {
+  border: 2px solid #5a8ade;
+  background-color: #fff;
+}
 
-.Home {
+/* Log-in Button Design */
+.login-btn {
+  width: 100%;
+  padding: 0.5rem 1rem;
+  background-color: #1c343f;
+  font-size: 1.1rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: .3s;
+  color: #f4f4f4;
+}
+
+.login-btn:hover {
+  background-color: #2f4a56;
+}
+
+/* Responsive design of log in */
+@media screen and (max-width: 880px) {
+  .login-box {
+    grid-template-columns: 1fr;
+  }
+
+  .left {
+    height: 300px;
+  }
+}
+
+/* Back button Design*/
+.backButton button {
+  padding: 1rem 5.5rem;
+  background-color: #D3D0CBFF;
+  font-size: 1.1rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: .3s;
   display: flex;
-}
-
-
-
-.Home .div1 {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 50%;
-  height: 100%;
-  background-image: url('photos/photo1.png');
-  background-position: center;
-}
-
-.Home .div2 {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 50%;
-  height: 100%;
-  background-color: rgb(65, 82, 179);
-  color: white;
-  display: flex;
-  font-size: 20px;
-  line-height: 35px;
-}
-
-.Home .div2 .container {
   display: block;
-  margin: auto auto auto auto;
-
-}
-
-.Heading h1 {
-  font-size: 50px;
-  margin-bottom: 20px;
-}
-
-.LogInButton {
-  width: 100px;
-  height: 100px;
-}
-
-.AccountBalance {
-  width: 70%;
-  height: 50px;
-  background-color: white;
-}
-
-.AccountBalance h1 {
-  color: black;
-}
-
-.Input input {
+  margin: 15px auto 30px auto;
   border-radius: 5px;
-  padding: 10px;
-  border: none;
   font-size: 15px;
+  font-weight: bold;
+  text-shadow: 1px 1px black;
+  letter-spacing: 2px;
 }
 
-.LogInButton button {
-  margin-top: 20px;
-  padding: 10px 20px;
-  border: none;
+.backButton button:hover {
+  background-color: #D3D0CBFF;
+}
+
+/* Option Design */
+.option {
+  width: 250px;
+  text-align: center;
+  cursor: pointer;
   border-radius: 5px;
-  cursor: pointer;
+  overflow: hidden;
+  position: relative;
+  display: grid;
+  grid-template-rows: 3fr 1fr;
+  margin: 30px;
+  border-radius: 15px;
+}
+
+.option img {
+  width: 100%;
+  height: 100%;
+}
+
+.option-name {
   background-color: #f4f4f4;
-}
-
-.LogInButton button:active {
-  transform: scale(0.94);
-}
-
-.LogInButton button:hover {
-  background-color: #b6a8a8;
-}
-
-.ManagerHomePage {
-  color: black;
-  border: 1px solid black;
-  background-color: white;
-  padding: 70px;
-  margin: auto;
-
-}
-
-.Button button {
-  width: 200px;
-  padding: 10px 0 10px 0;
-  margin: 5px;
-  cursor: pointer;
-
-}
-
-.Button button:active {
-  transform: scale(0.94);
-}
-
-.Button button:hover {
-  background-color: #b6a8a8;
-}
-
-.ChoseBuilding .container1 {
   display: flex;
-  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  text-shadow: 1px 1px black;
+  letter-spacing: 1.5px;
 }
 
-.ChoseBuilding .leftSlide, .rightSlide {
-  margin-top: 19%;
+.option-name :hover {}
 
+/* Page template Design */
+
+.pageTemplate h1 {
+  margin: 10px 0;
+  text-align: center;
+  color: #f4f4f4;
+  text-shadow: 1px 1px #f4f4f4;
 }
 
-.ChoseBuilding .table {
-  margin-left: 20px;
-  margin-right: 20px;
+.optionsContainer {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  justify-content: center;
+  align-items: center;
+  direction: rtl;
 }
 
-.ChoseBuilding h1 {
-  margin-left: 20px;
-  margin-right: 20px;
+/* Router link design */
+.link {
+  text-decoration: none;
+}
+
+/* Responsive design for building selection */
+@media screen and (max-width: 700px) {
+  .optionsContainer {
+    grid-template-columns: repeat(2, auto);
+    padding: 20px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .optionsContainer {
+    grid-template-columns: repeat(1, auto);
+    padding: 20px;
+  }
+
+  .building-selection h1 {
+    margin-top: 20px;
+    letter-spacing: 2px;
+  }
 }
