--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,6 @@ body {
   /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
   margin: 0;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -138,7 +137,7 @@ body {
 /* Back button Design*/
 .backButton button {
   padding: 1rem 5.5rem;
-  background-color: #D3D0CBFF;
+  background: linear-gradient(to left, #c2c0c0, #D3D0CBFF);
   font-size: 1.1rem;
   outline: none;
   cursor: pointer;
@@ -149,9 +148,10 @@ body {
   border-radius: 5px;
   font-size: 15px;
   font-weight: bold;
-  text-shadow: 1px 1px black;
+  text-shadow: 1px 1px #142831;
   letter-spacing: 2px;
   border: none;
+  color: #142831;
 }
 
 .backButton button:hover {
@@ -191,9 +191,7 @@ body {
   margin-top: 15px;
 }
 
-.option:hover {
-  
-}
+.option:hover {}
 
 /* Page template Design */
 
@@ -234,5 +232,167 @@ body {
   .building-selection h1 {
     margin-top: 20px;
     letter-spacing: 2px;
+  }
+}
+
+/* form design */
+.wrapper {
+  width: 100%;
+  height: 60vh;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.formContainer {
+  width: 100%;
+  max-width: 27rem;
+  background-color: #fff;
+  position: relative;
+  padding: 5rem 0;
+  box-shadow: 0 1px 1.5 1.5rem rgba(0, 0, 0, .1);
+  border-radius: 1rem;
+  z-index: 1;
+}
+
+.formContainer::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 17rem;
+  background: linear-gradient(to left, #c2c0c0, #D3D0CBFF);
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+  z-index: -1;
+}
+
+.formHeading {
+  color: #142831;
+  font-size: 2rem;
+  position: absolute;
+  top: 1rem;
+  left: 10.5rem;
+  font-weight: bold;
+}
+
+form {
+  transform: translateX(15rem);
+  padding: 0.5rem 0;
+  background-color: #fff;
+  border-radius: 1rem;
+  box-shadow: 0 1px 1.5rem rgba(0, 0, 0, .1);
+}
+
+.input-group {
+  width: 85%;
+  margin: 0 auto;
+  position: relative;
+  display: flex;
+  align-items: baseline;
+  direction: rtl;
+}
+
+.input-group input {
+  position: relative;
+  width: 100%;
+  padding: 1rem 0.5rem;
+  margin-top: .5rem;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  color: #142831;
+}
+
+.input-group>i {
+  font-size: 1.5rem;
+  color: #142831;
+}
+
+.input-group .bar {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .1);
+  width: 100%;
+  height: 1px;
+}
+
+.input-group .bar::before {
+  content: '';
+  position: absolute;
+  background-color: #142831;
+  width: 0;
+  height: 2px;
+  transition: width 650ms;
+}
+
+.input-group input:focus+.bar::before {
+  width: 100%;
+}
+
+.input-group button {
+  margin: 1rem auto;
+  padding: 1rem 4rem;
+  background: #142831;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  border: none;
+  color: #fff;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 3rem;
+}
+
+.input-group button:focus,
+.input-group button:hover {
+
+
+  background: #142831;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #2C5364, #203A43, #0F2027);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #2C5364, #203A43, #0F2027);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+/* for resposive design */
+@media screen and (max-width: 850px) {
+  .wrapper {
+    height: 70vh;
+  }
+
+  .formContainer {
+    margin: 10px;
+    padding: 5rem 0 2rem 0;
+  }
+
+  .formContainer::before {
+    height: 5rem;
+  }
+
+  .formHeading {
+    font-size: 150%;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+  }
+
+  form {
+    border-radius: initial;
+    transform: initial;
+    box-shadow: none;
+  }
+
+  .input-group button {
+    margin: 2rem auto 0 auto;
+    padding: 1rem 4rem;
   }
 }
