--- a/src/App.css
+++ b/src/App.css
@@ -370,7 +370,14 @@ form {
   margin-right: 2%;
 }
 
-
+.input-group select{
+  width: 85%;
+  margin: 4%;
+  position: relative;
+  display: flex;
+  align-items: baseline;
+  direction: rtl;
+}
 .input-group button {
   margin: 1rem auto;
   padding: 1rem 4rem;
@@ -453,4 +460,5 @@ form {
 .tableData h1 {
   text-align: center;
   margin: 4%;
+  color: #fff;
 }
