--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
   /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);
   /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
+  background: linear-gradient(to right, #0da9eb, #3d88a1, #09668e);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   margin: 0;
   background-repeat: no-repeat;
@@ -530,5 +530,7 @@ body {
   position: absolute;
   right: 10px;
   top: 5px;
-
+}
+.mapping .optionsContainer{
+  cursor:n-resize
 }
