--- a/src/App.css
+++ b/src/App.css
@@ -402,11 +402,11 @@ body {
   width: 100%;
 }
 
-.AddNewMeeting {
+/* .AddNewMeeting {
   display: grid;
   grid-template-columns: repeat(2, auto);
   margin-right: 5%;
-}
+} */
 
 .input-building-group {
   display: grid;
@@ -532,7 +532,29 @@ body {
   right: 10px;
   top: 5px;
 }
-
-.AddNewMeeting h1{
+.input-building{
+  padding: 6%;
+}
+.input-building table{
+  margin: 0 auto;
+  position: relative;
+  direction: rtl;
+}
+.input-building th{
+  padding: 4px;
+  position: relative;
+  top: 5px;
+}
+.input-building h4 {
   text-align: center;
 }
+.summary h4{
+  text-align: center;
+}
+.summary textarea{
+  text-align: right;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
