--- a/src/App.css
+++ b/src/App.css
@@ -178,7 +178,6 @@ body {
 
 /* Back button Design*/
 .backButton {
-  
   all: initial;
   float: left;
   margin-left: 10px;
@@ -294,26 +293,6 @@ body {
 /* Router link design */
 .link {
   text-decoration: none;
-}
-
-/* Responsive design for building selection */
-@media screen and (max-width: 700px) {
-  .optionsContainer {
-    grid-template-columns: repeat(2, auto);
-    padding: 20px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .optionsContainer {
-    grid-template-columns: repeat(1, auto);
-    padding: 20px;
-  }
-
-  .building-selection h1 {
-    margin-top: 20px;
-    letter-spacing: 2px;
-  }
 }
 
 /* form design */
@@ -470,7 +449,7 @@ body {
 /* for resposive design */
 @media screen and (max-width: 2000px) {
   .wrapper {
-    height: 70vh;
+    height: 80vh;
   }
 
   .formContainer {
@@ -973,4 +952,71 @@ body {
   height: 94px;
   bottom: -94px;
   animation-delay: 38s;
+}
+
+@media screen and (max-width: 900px) {
+  .optionsContainer {
+    grid-template-columns: repeat(1, auto);
+    padding: 20px;
+  }
+  .optionsContainer {
+    grid-template-columns: repeat(1, auto);
+    padding: 20px;
+  }
+
+  .building-selection h1 {
+    margin-top: 20px;
+    letter-spacing: 2px;
+  }
+  .pageTemplate h1{
+    font-size: 170%;
+    bottom: 60px;
+    text-align: center;
+    color: #f4f4f4;
+    position: relative;
+    text-shadow: 1px 1px #161515;
+  }
+  .tableData h1 {
+    text-align: center;
+    margin: 5%;
+    color: #fff;
+    text-shadow: 1px 2px #161515;
+  }
+  .ok{
+    position: relative;
+    margin: 30px;
+    font-size: 20px;
+    right: 30%;
+  }
+ 
+  .input-building th {
+    padding: 1px;
+    position: relative;
+    top: 10px;
+    right: 4px;
+  }
+  
+  .input-building h4 {
+    text-align: center;
+  }
+  .summary h4 {
+    text-align: center;
+  }
+  
+  .summary textarea {
+    text-align: right;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 40px;
+  }
+  .addNewMeeting{
+    padding: 1%;
+    padding-top: 30%;
+  }
+  .Scholarship .input-group{
+    width: 140%;
+    direction: rtl;
+    right: 50%;
+  }
 }
