--- a/src/App.css
+++ b/src/App.css
@@ -275,15 +275,13 @@ body {
   position: relative;
   text-shadow: 1px 2px #161515;
 }
-
-.pageTemplate h2 {
+.DisplaySummary {
   margin: 10px 0;
   text-align: center;
   color: #f4f4f4;
   position: relative;
   text-shadow: 1px 2px #161515;
 }
-
 .pageTemplate h3 {
   margin: 10px 0;
   text-align: center;
